--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -1,9 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.CountingSemaphores01=CountingSemSync,3,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK,CountingSemaphores01
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK
 FREERTOS.Tasks01=task_atm90e36a,0,256,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,256,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,128,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,256,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
@@ -21,8 +20,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP7=TIM3
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC2
@@ -40,6 +40,7 @@ Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin2=PA4
 Mcu.Pin20=VP_SYS_VS_tim1
 Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
@@ -47,7 +48,7 @@ Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
 Mcu.Pin9=PB10
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -70,6 +71,7 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM2_IRQn=true\:12\:0\:true\:false\:true\:false\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
@@ -181,6 +183,10 @@ TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=1000
 TIM2.Prescaler=1600
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM3.Period=10000
+TIM3.Prescaler=1600
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -189,5 +195,7 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
