- Adjust tasks stack size; - Change order of APIs initialization, to create queue first; - Makes some functions private; - Implements 'PrintThis' UART command to return ATM reagisters values;

--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -3,7 +3,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK
-FREERTOS.Tasks01=task_atm90e36a,0,256,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,256,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,128,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,256,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,512,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,512,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTIMER_QUEUE_LENGTH=16
@@ -146,7 +146,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
