--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -3,7 +3,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK
-FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,512,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,512,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,128,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,512,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTIMER_QUEUE_LENGTH=16
@@ -71,7 +71,7 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM2_IRQn=true\:12\:0\:true\:false\:true\:false\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
@@ -187,7 +187,8 @@ TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM3.Period=10000
 TIM3.Prescaler=1600
-USART3.IPParameters=VirtualMode
+USART3.BaudRate=57600
+USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
