--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -18,11 +18,12 @@ Mcu.IP1=I2C2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP5=SPI3
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC2
@@ -36,11 +37,17 @@ Mcu.Pin15=PD14
 Mcu.Pin16=PD15
 Mcu.Pin17=PA13
 Mcu.Pin18=PA14
-Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin19=PC10
 Mcu.Pin2=PA4
-Mcu.Pin20=VP_SYS_VS_tim1
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PC11
+Mcu.Pin21=PC12
+Mcu.Pin22=PD0
+Mcu.Pin23=PD1
+Mcu.Pin24=PD2
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin26=VP_SYS_VS_tim1
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
@@ -48,7 +55,7 @@ Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
 Mcu.Pin9=PB10
-Mcu.PinsNb=23
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -64,6 +71,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
+NVIC.SPI3_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -100,12 +108,26 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.Locked=true
 PC5.Signal=GPIO_Input
+PD0.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.PinState=GPIO_PIN_SET
+PD0.Signal=GPIO_Output
+PD1.Locked=true
+PD1.Signal=GPIO_Output
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
@@ -114,6 +136,8 @@ PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD2.Locked=true
+PD2.Signal=GPIO_Input
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.Mode=Asynchronous
@@ -146,7 +170,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -179,6 +203,12 @@ SPI1.FirstBit=SPI_FIRSTBIT_MSB
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,FirstBit,CLKPolarity,CLKPhase,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI3.CalculateBaudRate=1000.0 KBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=1000
