- Integração V2 das funcionalidades LORA; - Realocação de algumas macros relacionadas ao RTOS; - Pequeno ajuste no modulo de software timer; - Reconfiguração dos pinos digitais relacionados so modulo Lora;

--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -1,12 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.FootprintOK=true
+FREERTOS.FootprintOK=false
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK
-FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,128,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,512,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,1024,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,1024,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTIMER_QUEUE_LENGTH=16
+FREERTOS.configTOTAL_HEAP_SIZE=32768
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
@@ -114,19 +115,27 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC2.GPIOParameters=GPIO_Speed,PinState
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC2.Locked=true
+PC2.PinState=GPIO_PIN_SET
 PC2.Signal=GPIO_Output
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.Locked=true
 PC5.Signal=GPIO_Input
-PD0.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PD0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD0.GPIO_PuPd=GPIO_NOPULL
+PD0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PD0.Locked=true
 PD0.PinState=GPIO_PIN_SET
 PD0.Signal=GPIO_Output
+PD1.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.Locked=true
+PD1.PinState=GPIO_PIN_SET
 PD1.Signal=GPIO_Output
 PD12.Locked=true
 PD12.Signal=GPIO_Output
