UART: - Adiciona logica para imprimir /r a partir da propria fila de energia, ao inves de misturar envios para a fila de energia e fila da UART mesmo; - Altera valor default de delay da task Uart, para 20ms e remove comentário na tsk_uart.c que alertava para não utilizar delays neste loop embarcado. Foi possível passar a utilizar delays porque a interrupção atualmente está sendo reacionada dentro do callback da propria interrupção, portanto tendo recebido o 1 byte, a interrupção estará sempre sendo reabilitada, evitando erro de ORE. O objetivo dessa implementação é livrar tempo de processamento que estava sendo ocupado com tarefas desnecessarias; - Edita a função de envio de eventos para ATM, adicionando a possibilidade de finalmente enviar ponteiro para um buffer de dados
PROTOCOLO:
- Edita função de parser para evitar retirada 'infinita' de dados, travando o valor maximo em 50 bytes de dados;
- Edita comandos que antes utilizavam datalen como parametro de dados, para passar a utilizar datalen de fato como datalen, e ponteiro de dados como parametros real;

ATM:
- Adiciona novos estados e comandos na maquina do ATM, para proporcionar ajuste fino dos parametros de referência, utilizados no calculo dos valores de calibração de ganho;
- Altera nomes das funções que caminham pela maquina;
- Adiciona novo campos na struct do driver, para armazenar os valores dos parametros de ganho e offset configurados no hardware, bem como função para devolver estes valores ao default;
- Cria variável nova para manter valores padrão de calibração, de forma a evitar necessidade de realizar o processo de calibração toda vez;
- Cria funções de aquisição dos parâmetros de THD e Frequencia;
- Limpeza de funções legado que nunca foram nem viriam a ser mais utilizadas;

OUTROS:
- Atualização no references.h e global_configs.h
- Add novos comandos no docklight
- Aumenta stach da thread do ATM para 1,5KB

--- a/NewMeter.ioc
+++ b/NewMeter.ioc
@@ -1,9 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_COUNTING_SEMAPHORES,configQUEUE_REGISTRY_SIZE,configUSE_TIMERS,configTIMER_QUEUE_LENGTH,INCLUDE_vTaskDelayUntil,INCLUDE_xTaskGetHandle,FootprintOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=task_atm90e36a,0,1024,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,1024,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,1024,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=task_atm90e36a,0,1536,start_atm90e36a_task,As weak,NULL,Dynamic,NULL,NULL;task_uart,0,1024,start_uart_task,As weak,NULL,Dynamic,NULL,NULL;task_leds,0,1024,start_leds_task,As weak,NULL,Dynamic,NULL,NULL;task_sx1278,0,1024,start_sx1278_task,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTIMER_QUEUE_LENGTH=16
@@ -60,8 +60,8 @@ Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.1
+MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -69,18 +69,18 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C2_EV_IRQn=true\:12\:0\:true\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.SPI3_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
+NVIC.SPI3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM2_IRQn=true\:12\:0\:true\:false\:true\:false\:true\:true
-NVIC.TIM3_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:13\:0\:true\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
@@ -161,12 +161,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407VGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
